# verus

source/: .gitignore  Cargo.toml
source/cargo-verus/: Cargo.toml  build.rs
source/cargo-verus-illustration/: illustrate.sh
source/cargo-verus-illustration/doubly-linked-xor/: Cargo.toml
source/cargo-verus-illustration/doubly-linked-xor-test/: Cargo.toml
source/cargo-verus-illustration/doubly-linked-xor-test-using-verus-sysroot/: Cargo.toml  src
source/cargo-verus-illustration/doubly-linked-xor-using-verus-sysroot/: Cargo.toml
source/cargo-verus-illustration/rust-verify-examples/: Cargo.toml  link
source/cargo-verus/src/: main.rs
source/hacking/cargo-verus/: Cargo.toml
source/hacking/cargo-verus/src/: main.rs
source/hacking/examples/bar/: Cargo.toml
source/hacking/examples/doubly-linked-xor/: Cargo.toml
source/hacking/examples/foo/: Cargo.toml
source/hacking/examples/integers/: Cargo.toml
source/hacking/examples/integers/src/: lib.rs
source/hacking/examples/rust-verify-examples/: Cargo.toml  helper.py
source/hacking/verus-driver/: Cargo.toml
source/hacking/verus-driver/src/: main.rs
source/rust_verify/src/: config.rs  lifetime.rs  verifier.rs
source/verus-driver/: Cargo.toml
source/verus-driver/src/: callback_utils.rs  dep_tracker.rs  main.rs  verifier.rs
source/verus-sysroot-dummy/: build-verus-sysroot.sh
source/verus/src/: main.rs
source/vstd/: Cargo.toml
