[package]
name = "verus-driver"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
rust_verify = { path = "../../rust_verify" }
rustc_tools_util = "0.3.0"
termize = "0.1"
color-print = "0.3.4"
anstream = "0.6.0"

[build-dependencies]
rustc_tools_util = "0.3.0"

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true
