[package]
name = "verus-driver"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
rust_verify = { path = "../../rust_verify" }
rustc_tools_util = "0.3.0"

[build-dependencies]
rustc_tools_util = "0.3.0"

[features]
singular = ["rust_verify/singular"]

[package.metadata.rust-analyzer]
rustc_private = true
